--- a/index.html
+++ b/index.html
@@ -4,18 +4,13 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-        <style>
-            body
-            {
-                font-family: helvetica;
-            }
-        </style>
+        <title>Coming Soon...</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>The Infinity Formula</h1>
-        <p>When you take the if out of life, you're left with le, which is something.</p>
-        <hr>
-        <p>Coming soon...</p>
+        <div id="main-content">
+            <h1>The Infinity Formula</h1>
+            <p>When you take the if out of life, you're left with le, which is something.</p>
+        </div>
     </body>
 </html>
