--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div id="main-content">
             <h1>The Infinity Formula</h1>
             <p>When you take the if out of life, you're left with le, which is something.</p>
-            <p><a href="https://theonlyif.bandcamp.com/">Bandcamp</a> | <a href="https://facebook.com/theonlyif/">Facebook</a> | <a href="mailto:theinfinityformula@gmail.com">Contact</a></p>
+            <p><a href="https://theonlyif.bandcamp.com/">Bandcamp</a> | <a href="https://facebook.com/theonlyif/">Facebook</a> | <a href="mailto:theinfinityformula@gmail.com">Booking</a></p>
         </div>
     </body>
 </html>
