--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <nav class="navbar navbar-default">
                 <div class="container-fluid">
                     <ul class="nav navbar-nav">
-                        <li><a onclick="renderNews()" href="#">News</a></li>
-                        <li><a onclick="renderBio()" href="#">Bio</a></li>
-                        <li><a onclick="renderShows()" href="#">Shows</a></li>
-                        <li><a onclick="renderMerch()" href="#">Merch</a></li>
-                        <li><a onclick="renderContact()">Contact</a></li>
+                        <li><a onclick="renderNews()" >News</a></li>
+                        <li><a onclick="renderBio()" >Bio</a></li>
+                        <li><a onclick="renderShows()" >Shows</a></li>
+                        <li><a onclick="renderMerch()" >Merch</a></li>
+                        <li><a onclick="renderContact()" >Contact</a></li>
                         <li><a href="https://theonlyif.bandcamp.com/album/alienation" target="_blank">Music</a></li>
                         <li><a href="https://www.facebook.com/theinfinityformula/photos" target="_blank">Gallery</a></li>
                     </ul>
