--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         </div>
 
-        <div class="footer">&copy; 2021 The Infinity Formula</div>
+        <div class="footer">&copy; 2011-2021 The Infinity Formula</div>
 
     </body>
 
